Fix T52573: Cycles baking artifacts

Synchronize condition for faces split between Cycles itself and baking API.